fix z-index bug

--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@ a {
 }
 
 .transform {
+  position: relative;
   transition: transform 0.5s ease;
   transform: scale(1, 1);
   display: inline-block;
